Bug 385111 - Incorrect title
Summary: Incorrect title
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 349287 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-09-26 22:43 UTC by Kevin Gilbert
Modified: 2018-12-01 05:10 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Gilbert 2017-09-26 22:43:16 UTC
Under some (unknown) circumstances, the window title is incorrect, ie, it does not reflect the current directory.

Navigating to another directory does not correct the situation by updating the title. The only way to get Dolphin to sync the title with the current directory is to restart Dolphin.
Comment 1 Nate Graham 2017-09-29 16:30:59 UTC
There isn't enough information in this bug to investigate it. Can you put together a reproducible test case that gets Dolphin into this state?
Comment 2 Kevin Gilbert 2017-09-30 01:26:26 UTC
As I said in the bug report, I have not yet been able to discern when this freeze occurs. If/when I do, I will report back.
Comment 3 Nate Graham 2017-09-30 03:04:58 UTC
Thanks!
Comment 4 Julian Steinmann 2018-04-11 17:58:38 UTC
I have indeed found a reproducible case that works with Dolphin 17.12.3:

1. Open up Dolphin & toggle split view
2. Navigate to some random directory in the left panel
3. Close split view (the window title should now update to show the folder of the right panel)
4. Navigate to some random directory

Expected results:
The window title equals the random directory I am currently in.

Actual results:
The window title stays the way it was at the end of 3., even if you e.g. toggle the search bar.

The only way how to get the "correct" title back is to toggle split view on and off again. 

Can anyone else confirm this bug after following these steps?
Comment 5 Robert Jennings 2018-04-12 15:20:03 UTC
Hi,

Been playing around with this. I might know what's going on but wanted you guys to check my thinking and, if I'm right, maybe come up with a better solution?

In dolphintabpage.cpp:

Through the connections set up in createViewContainer(), m_primaryViewContainer->setActive(true), at line 98, ends up triggering slotViewActivated().

Because m_primaryViewActive is true, oldActiveView is not set to the view needed in this particular situation. Both oldActiveView and newActiveView end up pointing to the same view and the connections are not set up.

Adding

m_primaryViewActive = false;

inside the if clause at line 93 seems to fix it?
Comment 6 Nate Graham 2018-04-18 22:02:08 UTC
Thanks for investigating, Robert! Please feel free to submit a patch! We have very good documentation on this:

- https://community.kde.org/Get_Involved/development
- https://community.kde.org/Infrastructure/Phabricator

I'd be happy to help if you need a hand.
Comment 7 Patrick Silva 2018-04-23 03:34:28 UTC
*** Bug 349287 has been marked as a duplicate of this bug. ***
Comment 8 Elvis Angelaccio 2018-04-25 10:43:28 UTC
Git commit 74c2d4ea2d256183dc1f869a78ee5b1b79888330 by Elvis Angelaccio.
Committed on 25/04/2018 at 10:34.
Pushed by elvisangelaccio into branch 'Applications/18.04'.

Add failing test case for bug #385111

Will be fixed by D12446.

M  +44   -0    src/tests/dolphinmainwindowtest.cpp

https://commits.kde.org/dolphin/74c2d4ea2d256183dc1f869a78ee5b1b79888330
Comment 10 Paul Richter 2018-11-30 10:48:44 UTC
I am still seeing this behavior in Version 19.03.70.
Comment 11 Nate Graham 2018-12-01 05:10:25 UTC
Can you provide a screenshot?